--- a/TeamWebsite/demos.html
+++ b/TeamWebsite/demos.html
@@ -9,23 +9,27 @@
     <link rel="icon" href="images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/styles.css" />
+
+    <!--Link to icon library-->
+    <link rel="stylesheet" href="styles/all.min.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" height="50" width="50"/> GLACIES INDICIUM</a>
+        <img src="images/logo.png" height="50" width="50" /> GLACIES INDICIUM</a
+      >
       <button
         class="navbar-toggler ml-auto"
         data-toggle="collapse"
-        data-target="#navbarNavDropdown">
+        data-target="#navbarNavDropdown"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html"> HOME
-            </a>
+            <a class="nav-link" href="index.html"> HOME </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="team.html">OUR TEAM</a>
@@ -36,12 +40,16 @@
               class="nav-link dropdown-toggle"
               data-toggle="dropdown"
               aria-haspopup="true"
-              aria-expanded="false">MORE INFO</a>
+              aria-expanded="false"
+              >MORE INFO</a
+            >
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
               <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
               <a class="dropdown-item" href="documents.html">DOCUMENTS</a>
               <a class="dropdown-item" href="schedule.html">SCHEDULE</a>
-              <a class="dropdown-item" href="demos.html">DEMOS<span class="sr-only">(current)</span></a>
+              <a class="dropdown-item" href="demos.html"
+                >DEMOS<span class="sr-only">(current)</span></a
+              >
             </div>
           </li>
           <li class="nav-item">
@@ -59,10 +67,34 @@
     <div class="jumbotron-fluid text-center">
       <h2>Project Demos</h2>
     </div>
+    <div class="container-fluid text-left margin-bottom-md">
+      <div class="list-group list-group-flush">
+        <div class="panel-group list-group-item list-group-item-action">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <a
+                class="dropdrown-link"
+                data-toggle="collapse"
+                href="#collapse2"
+                onclick="toggleDropdown(this)"
+              >
+                Alpha Prototype Demo <i class="fa fa-angle-up ml-2"></i
+              ></a>
+            </div>
+            <div id="collapse2" class="panel-collapse collapse">
+              <div class="iframe-container">
+                <iframe
+                  class="resp-iframe"
+                  src="https://www.youtube.com/embed/Gf84DuvnIEs"
+                  frameborder="0"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <p>
-      Coming soon!
-    </p>
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
