--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -44,13 +44,8 @@
               aria-expanded="false"
               >MORE INFO</a
             >
-            <div
-              class="dropdown-menu dropdown-menu-right"
-              aria-labelledby="dropdown09"
-            >
-              <a class="dropdown-item" href="requirements.html"
-                >PROJECT REQUIREMENTS</a
-              >
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown09">
+              <a class="dropdown-item" href="requirements.html">PROJECT REQUIREMENTS</a>
               <a class="dropdown-item" href="documents.html"
                 >DOCUMENTS<span class="sr-only">(current)</span></a
               >
@@ -88,10 +83,7 @@
           Team Inventory
         </a>
 
-        <a
-          href="documents/MiniIntro.pdf"
-          class="list-group-item list-group-item-action"
-        >
+        <a href="documents/MiniIntro.pdf" class="list-group-item list-group-item-action">
           Mini Intro Presentation
         </a>
 
@@ -149,7 +141,7 @@
                 href="#collapse2"
                 onclick="toggleDropdown(this)"
               >
-                Design Review 2 <i class="fa fa-angle-down ml-2"></i
+                Design Review 2 <i class="fa fa-angle-up ml-2"></i
               ></a>
             </div>
             <div id="collapse2" class="panel-collapse collapse">
@@ -169,11 +161,5 @@
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script>
-      function toggleDropdown(element) {
-        $(element).find('i').toggleClass('fa-angle-down');
-        $(element).find('i').toggleClass('fa-angle-up');
-      }
-    </script>
   </body>
 </html>
