--- a/TeamWebsite/documents.html
+++ b/TeamWebsite/documents.html
@@ -54,7 +54,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium">
+            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium" target="_blank"> 
               <img src="images/github-logo-grey.png" 
                    onmouseover="this.src='images/github-logo.png';" 
                    onmouseout="this.src='images/github-logo-grey.png';" 
