--- a/TeamWebsite/requirements.html
+++ b/TeamWebsite/requirements.html
@@ -44,8 +44,8 @@
               <a class="dropdown-item" href="demos.html">DEMOS</a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium">
+          <li class="nav-item"> 
+            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium" target="_blank">
               <img src="images/github-logo-grey.png" 
                    onmouseover="this.src='images/github-logo.png';" 
                    onmouseout="this.src='images/github-logo-grey.png';" 
