--- a/TeamWebsite/schedule.html
+++ b/TeamWebsite/schedule.html
@@ -55,7 +55,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium">
+            <a class="navbar-brand" href="https://github.com/mlgarrett/glacies-indicium" target="_blank">
               <img src="images/github-logo-grey.png" 
                    onmouseover="this.src='images/github-logo.png';" 
                    onmouseout="this.src='images/github-logo-grey.png';" 
